--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Site de Boris V2</h1>
+<html></html>
+<head></head>
+
+<body>
+<h1>Titre Niveau 1</h1>
+<h2>Titre Niveau 2</h2>
+<h3>Titre Niveau 3</h3>
+<h3>Titre Niveau 3</h3>
+<h2>Titre Niveau 2</h2>
+<h1>Titre Niveau 1</h1>
+
+</body>
+
+</html>
