--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head></head>
 
 <body>
-<h1>Titre Niveau 1</h1>
-<h2>Titre Niveau 2</h2>
-<h3>Titre Niveau 3</h3>
-<h3>Titre Niveau 3</h3>
-<h2>Titre Niveau 2</h2>
-<h1>Titre Niveau 1</h1>
+    <table border="1">
+        <tr><td>Jour</td><td>Lundi</td><td>Mardi</td></tr>
+        <tr><td>Matin</td><td colspan="2">Julie</td></tr>
+        <tr><td>Aprè-midi</td><td>Michel</td><td rowspan="2">Paul</td></tr>
+        <tr><td>Soir</td><td>Sandrine</td></tr>    
+    </table>
 
 </body>
 
